--- a/WpfWprowadzenie/MainWindow.xaml
+++ b/WpfWprowadzenie/MainWindow.xaml
@@ -6,7 +6,22 @@
         xmlns:local="clr-namespace:WpfWprowadzenie"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
-
-    </Grid>
+    <StackPanel>
+        <!--Jeden Pod Drugim-->
+        <Button>1</Button>
+        <Button>2</Button>
+        <Button>3</Button>
+        <Button>4</Button>
+        <Button>5</Button>
+        <Button>6</Button>
+        <StackPanel Orientation="Horizontal">
+            <!--Jeden Obok Drugiego-->
+            <Button>A</Button>
+            <Button>B</Button>
+            <Button>C</Button>
+            <Button>D</Button>
+            <Button>E</Button>
+            <Button>F</Button>
+        </StackPanel>
+    </StackPanel>
 </Window>
